# uv-wordle-solver

./: .gitignore  README.md  answers.txt  main.py  package_generator.py  pyproject.toml  solver.py  templates.py  words.py
